--- a/kube/istio/istio-operator.yaml
+++ b/kube/istio/istio-operator.yaml
@@ -12,28 +12,4 @@ spec:
         enabled: false
     ingressGateways:
       - name: istio-ingressgateway
-        enabled: true
-        k8s:
-          resources:
-            limits:
-              cpu: 500m
-              memory: 512Mi
-          overlays:
-            - apiVersion: apps/v1
-              kind: Deployment
-              name: istio-ingressgateway # The actual name of the ingress gateway deployment
-              patches:
-                - path: spec.template.spec.volumes[-1] # Append to the existing list of volumes
-                  value:
-                    name: proto-descriptor-vol
-                    configMap:
-                      name: proto-descriptor
-                      items:
-                        - key: desc.pb
-                          path: desc.pb
-                # Assuming the primary Envoy container is at index 0
-                - path: spec.template.spec.containers[0].volumeMounts[-1] # Append to the existing list of volume mounts
-                  value:
-                    name: proto-descriptor-vol
-                    readOnly: true
-                    mountPath: "/etc/envoy"
+        enabled: false
