--- a/kube/services/go-service-pod.yaml
+++ b/kube/services/go-service-pod.yaml
@@ -17,7 +17,7 @@ spec:
       containers:
       - image: go-service:latest
         name: go-service
-        imagePullPolicy: Never
+        imagePullPolicy: Always
         ports:
         - containerPort: 8080
         resources:
