--- a/kube/services/ingress-gateway.yaml
+++ b/kube/services/ingress-gateway.yaml
@@ -17,6 +17,29 @@ spec:
 
 ---
 
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: istio-ingressgateway-istio
+  namespace: istio-system
+spec:
+  selector:
+    matchLabels:
+      gateway.networking.k8s.io/gateway-name: istio-ingressgateway
+  template:
+    spec:
+      containers:
+      - name: istio-proxy
+        volumeMounts:
+        - name: proto-descriptor-vol
+          mountPath: /etc/envoy
+      volumes:
+      - name: proto-descriptor-vol
+        configMap:
+          name: proto-descriptor
+
+---
+
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
