--- a/go-service/makefile
+++ b/go-service/makefile
@@ -6,10 +6,12 @@ get:
 	go get -u
 
 build:
-	mkdir -p rpc
+	mkdir -p rpc/dotnet-service rpc/go-service
 	export PATH=$$PATH:$$(go env GOPATH)/bin; \
 	protoc -I ../contracts/greeter-go -I ../contracts/googleapis \
-		--go_out=rpc --go_opt=paths=source_relative --go-grpc_out=rpc --go-grpc_opt=paths=source_relative ../contracts/greeter-go/*.proto
+		--go_out=rpc/go-service --go_opt=paths=source_relative --go-grpc_out=rpc/go-service --go-grpc_opt=paths=source_relative ../contracts/greeter-go/*.proto
+	protoc -I ../contracts/greeter-dotnet -I ../contracts/googleapis \
+		--go_out=rpc/dotnet-service --go_opt=paths=source_relative --go-grpc_out=rpc/dotnet-service --go-grpc_opt=paths=source_relative ../contracts/greeter-dotnet/*.proto
 	go build -o server_exec
 	go mod tidy
 
