add port forwarding in dev container, fix deploy steps

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "makefile.extensionOutputFolder": "./.vscode"
+    "makefile.extensionOutputFolder": "./.vscode",
+    "protobuf.protoc.path": "/usr/local/bin/protoc"
 }
