--- a/kube/services-stage-1/grpc-web-filter.yaml
+++ b/kube/services-stage-1/grpc-web-filter.yaml
@@ -1,8 +1,7 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: EnvoyFilter
 metadata:
-  name: grpc-transcoder
-  namespace: istio-system
+  name: grpc-web-filter
 spec:
   workloadSelector:
     labels:
@@ -20,13 +19,6 @@ spec:
     patch:
       operation: INSERT_BEFORE
       value:
-        name: envoy.filters.http.grpc_json_transcoder
+        name: envoy.filters.http.grpc_web
         typed_config:
-          "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
-          proto_descriptor: /etc/envoy/desc.pb
-          services:
-          - go_service.Greeter
-          - dotnet_service.Greeter
-          print_options:
-            add_whitespace: true
-            always_print_primitive_fields: true
+          "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
