--- a/kube/services-stage-1/ingress-gateway.yaml
+++ b/kube/services-stage-1/ingress-gateway.yaml
@@ -2,7 +2,6 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
   name: istio-ingressgateway
-  namespace: istio-system
   annotations:
     networking.istio.io/service-type: ClusterIP
 spec:
@@ -17,38 +16,14 @@ spec:
 
 ---
 
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: istio-ingressgateway-istio
-  namespace: istio-system
-spec:
-  selector:
-    matchLabels:
-      gateway.networking.k8s.io/gateway-name: istio-ingressgateway
-  template:
-    spec:
-      containers:
-      - name: istio-proxy
-        volumeMounts:
-        - name: proto-descriptor-vol
-          mountPath: /etc/envoy
-      volumes:
-      - name: proto-descriptor-vol
-        configMap:
-          name: proto-descriptor
-
----
-
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
   name: ingress-http-router
-  namespace: default
 spec:
   parentRefs:
   - name: istio-ingressgateway
-    namespace: istio-system
+    namespace: default
   rules:
   - matches:
     - path:
@@ -67,7 +42,7 @@ spec:
     - type: CORS
       cors:
         allowOrigins: ["*"]
-        allowMethods: ["GET", "HEAD", "POST"]
+        allowMethods: ["GET", "HEAD", "POST", "OPTIONS"]
         allowHeaders:
         - Accept
         - Accept-Language
@@ -80,7 +55,7 @@ spec:
         - X-Accept-Content-Transfer-Encoding
         - X-Accept-Response-Streaming
         - X-User-Agent
-        - X-Grpc-Web
+        - x-grpc-web
         exposeHeaders:
         - grpc-status
         - grpc-message
@@ -101,7 +76,7 @@ spec:
     - type: CORS
       cors:
         allowOrigins: ["*"]
-        allowMethods: ["GET", "HEAD", "POST"]
+        allowMethods: ["GET", "HEAD", "POST", "OPTIONS"]
         allowHeaders:
         - Accept
         - Accept-Language
@@ -114,7 +89,7 @@ spec:
         - X-Accept-Content-Transfer-Encoding
         - X-Accept-Response-Streaming
         - X-User-Agent
-        - X-Grpc-Web
+        - x-grpc-web
         exposeHeaders:
         - grpc-status
         - grpc-message
